# chatroom

./: Cargo.toml  README.md
deploy/: DEPLOYMENT.md  chatroom-app.env  chatroom-app.service  chatroom-ctl.sh  deploy.sh  nginx-chatroom.conf  openresty-chatroom.conf
src/: chatroom.rs  handlers.rs  main.rs  websocket.rs
static/: app.js  index.html  style.css
wip/: WEBSOCKET_FIX.md  websocket-debug.sh
